# highlight_processor

./: .gitignore  README.md  pyproject.toml
examples/: hell-copy.tex  hello.tex
processor/: core.py  main.py
tests/: test_read_text.py
