[tool.poetry]
name = "highlight_processor"
version = "0.1.2"
description = ""
authors = ["svtter <svtter@qq.com>"]

packages = [
    { include = "processor" },
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hlpp = "processor.main:cli"
